--- a/HitomiScrollViewerLib/Views/PageViews/SettingsPage.xaml
+++ b/HitomiScrollViewerLib/Views/PageViews/SettingsPage.xaml
@@ -10,8 +10,17 @@
     xmlns:models="using:HitomiScrollViewerLib.Models"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-    <ScrollViewer>
-        <StackPanel Spacing="4">
+    <ScrollViewer Margin="256 8 256 0">
+        <StackPanel Spacing="4"
+                    Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
+                    BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
+                    CornerRadius="8 8 0 0"
+                    BorderThickness="1"
+                    Padding="16">
+            <TextBlock Text="Settings"
+                       Style="{StaticResource SubheaderTextBlockStyle}"
+                       FontWeight="Bold"
+                       Margin="0 16"/>
             <ct:SettingsCard Header="Flow Direction">
                 <ComboBox ItemsSource="{x:Bind models:CommonSettings.FLOW_DIRECTION_MODELS}"
                           DisplayMemberPath="DisplayText"
