--- a/HitomiScrollViewerLib/Views/PageViews/BrowsePage.xaml
+++ b/HitomiScrollViewerLib/Views/PageViews/BrowsePage.xaml
@@ -13,6 +13,18 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
     NavigationCacheMode="Required">
     <Grid Margin="8" RowSpacing="16">
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup>
+                <VisualState>
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="1800"/>
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="GalleryBrowseItemsViewLayout.MaximumRowsOrColumns" Value="2"/>
+                    </VisualState.Setters>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
@@ -25,13 +37,13 @@
             <Grid Grid.Row="0"
                   ColumnSpacing="8">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="10*"/>
-                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
                 <views:QueryBuilderView Grid.Column="0" ViewModel="{x:Bind ViewModel.QueryBuilderVM}"/>
                 <Button Grid.Column="1"
-                        VerticalAlignment="Stretch"
-                        HorizontalAlignment="Stretch"
+                        MinWidth="128"
+                        MinHeight="128"
                         Command="{x:Bind ViewModel.ExecuteQueryCommand}"
                         Style="{StaticResource AccentButtonStyle}"
                         >
@@ -62,16 +74,27 @@
             </Grid>
         </Grid>
         <ScrollViewer Grid.Row="1">
-            <ItemsRepeater ItemsSource="{x:Bind ViewModel.CurrentGalleryBrowseItemVMs}">
-                <ItemsRepeater.Layout>
-                    <StackLayout Spacing="4"/>
-                </ItemsRepeater.Layout>
-                <ItemsRepeater.ItemTemplate>
+            <ItemsView x:Name="GalleryBrowseItemsView"
+                       ItemsSource="{x:Bind ViewModel.CurrentGalleryBrowseItemVMs}"
+                       SelectionMode="Single">
+                <ItemsView.Layout>
+                    <UniformGridLayout x:Name="GalleryBrowseItemsViewLayout"
+                                       Orientation="Horizontal"
+                                       ItemsJustification="SpaceBetween"
+                                       MinRowSpacing="8"
+                                       MinColumnSpacing="8"
+                                       ItemsStretch="Uniform"
+                                       MaximumRowsOrColumns="1"/>
+                </ItemsView.Layout>
+                <ItemsView.ItemTemplate>
                     <DataTemplate x:DataType="bpvms:GalleryBrowseItemVM">
-                        <bpviews:GalleryBrowseItem ViewModel="{x:Bind}"/>
+                        <ItemContainer>
+                            <bpviews:GalleryBrowseItem ViewModel="{x:Bind}"
+                                                       Width="{x:Bind Width, Mode=OneWay}"/>
+                        </ItemContainer>
                     </DataTemplate>
-                </ItemsRepeater.ItemTemplate>
-            </ItemsRepeater>
+                </ItemsView.ItemTemplate>
+            </ItemsView>
         </ScrollViewer>
     </Grid>
 </Page>
