--- a/HitomiScrollViewerLib/Views/PageViews/BrowsePage.xaml
+++ b/HitomiScrollViewerLib/Views/PageViews/BrowsePage.xaml
@@ -13,18 +13,6 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
     NavigationCacheMode="Required">
     <Grid Margin="8" RowSpacing="16">
-        <VisualStateManager.VisualStateGroups>
-            <VisualStateGroup>
-                <VisualState>
-                    <VisualState.StateTriggers>
-                        <AdaptiveTrigger MinWindowWidth="1800"/>
-                    </VisualState.StateTriggers>
-                    <VisualState.Setters>
-                        <Setter Target="GalleryBrowseItemsViewLayout.MaximumRowsOrColumns" Value="2"/>
-                    </VisualState.Setters>
-                </VisualState>
-            </VisualStateGroup>
-        </VisualStateManager.VisualStateGroups>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
@@ -61,29 +49,32 @@
                         <TextBlock Text="{x:Bind ViewModel.SortDialogVM.DialogShowButtonText, Mode=OneWay}"/>
                     </StackPanel>
                 </Button>
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                    <TextBlock x:Name="PageTextBlock"/>
-                    <ComboBox ItemsSource="{x:Bind ViewModel.Pages, Mode=OneWay}"
-                              SelectedIndex="{x:Bind ViewModel.SelectedPageIndex, Mode=TwoWay}"/>
-                </StackPanel>
-                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                    <TextBlock x:Name="PageSizeTextBlock"/>
+                <ComboBox HorizontalAlignment="Center"
+                          ItemsSource="{x:Bind ViewModel.Pages, Mode=OneWay}"
+                          SelectedIndex="{x:Bind ViewModel.SelectedPageIndex, Mode=TwoWay}"/>
+                <StackPanel Orientation="Horizontal"
+                            HorizontalAlignment="Right" VerticalAlignment="Center"
+                            Spacing="8">
+                    <TextBlock Text="Items per page" VerticalAlignment="Center"/>
                     <ComboBox ItemsSource="{x:Bind ViewModel.PageSizes, Mode=OneWay}"
                               SelectedIndex="{x:Bind ViewModel.SelectedPageSizeIndex, Mode=TwoWay}"/>
                 </StackPanel>
             </Grid>
         </Grid>
-        <ScrollViewer Grid.Row="1">
-            <ItemsView x:Name="GalleryBrowseItemsView"
+        <ScrollViewer Grid.Row="1"
+                      Padding="64 0">
+            <ItemsView x:Name="GalleryItemsView"
                        ItemsSource="{x:Bind ViewModel.CurrentGalleryBrowseItemVMs}"
-                       SelectionMode="Single">
+                       SelectionMode="Single"
+                       SizeChanged="GalleryItemsView_SizeChanged">
                 <ItemsView.Layout>
-                    <UniformGridLayout x:Name="GalleryBrowseItemsViewLayout"
+                    <UniformGridLayout x:Name="GalleryItemsViewLayout"
                                        Orientation="Horizontal"
                                        ItemsJustification="SpaceBetween"
+                                       ItemsStretch="Fill"
+                                       MinItemHeight="400"
                                        MinRowSpacing="8"
                                        MinColumnSpacing="8"
-                                       ItemsStretch="Uniform"
                                        MaximumRowsOrColumns="1"/>
                 </ItemsView.Layout>
                 <ItemsView.ItemTemplate>
