--- a/HitomiScrollViewerLib/Views/SearchPageViews/DownloadItem.xaml
+++ b/HitomiScrollViewerLib/Views/SearchPageViews/DownloadItem.xaml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Grid
+<UserControl
     x:Class="HitomiScrollViewerLib.Views.SearchPageViews.DownloadItem"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -7,57 +7,55 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     
+    x:DefaultBindMode="OneWay"
     Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
     BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}"
     CornerRadius="{StaticResource OverlayCornerRadius}"
     BorderThickness="1"
     Padding="16"
-    ColumnSpacing="8"
-    RowSpacing="4"
-    x:DefaultBindMode="OneWay"
+    IsEnabled="{x:Bind ViewModel.IsEnabled}"
     >
-    <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="*"/>
-        <ColumnDefinition Width="Auto"/>
-        <ColumnDefinition Width="Auto"/>
-    </Grid.ColumnDefinitions>
-    <Grid.RowDefinitions>
-        <RowDefinition/>
-        <RowDefinition/>
-        <RowDefinition/>
-    </Grid.RowDefinitions>
-    <TextBlock Grid.Row="0" Grid.Column="0"
-               TextWrapping="WrapWholeWords" IsTextSelectionEnabled="True"
-               Text="{x:Bind ViewModel.GalleryDescriptionText}"
-               />
-    <ProgressBar Grid.Row="1" Grid.Column="0"
-                 Value="{x:Bind ViewModel.ProgressBarValue}"
-                 Maximum="{x:Bind ViewModel.ProgressBarMaximum}"
-                 IsEnabled="{x:Bind ViewModel.IsEnabled}"
-                 />
-    <TextBlock Grid.Row="2" Grid.Column="0"
-               TextWrapping="WrapWholeWords" IsTextSelectionEnabled="True"
-               Text="{x:Bind ViewModel.ProgressText}"/>
-    <Button Grid.Row="0" Grid.Column="1"
-            HorizontalAlignment="Stretch"
-            IsEnabled="{x:Bind ViewModel.IsEnabled}"
-            Click="{x:Bind ViewModel.DownloadToggleButton_Clicked, Mode=OneTime}"
-            ToolTipService.ToolTip="{x:Bind ViewModel.DownloadToggleButtonToolTip}"
-            />
-    <Button Grid.Row="0" Grid.Column="2"
-            x:Uid="/DownloadItem/CancelBtn"
-            HorizontalAlignment="Stretch"
-            IsEnabled="{x:Bind ViewModel.IsEnabled}"
-            Click="{x:Bind ViewModel.RemoveDownloadButton_Click, Mode=OneTime}"
-            >
-        <SymbolIcon Symbol="Delete"/>
-    </Button>
-    <ComboBox Grid.Row="1" Grid.Column="1" Grid.RowSpan="2" Grid.ColumnSpan="2"
-              ItemsSource="{x:Bind ViewModel.ThreadNums, Mode=OneTime}"
-              SelectedItem="{x:Bind ViewModel.ThreadNum, Mode=TwoWay}"
-              IsEnabled="{x:Bind ViewModel.IsEnabled}">
-        <ComboBox.Header>
-            <TextBlock x:Uid="/DownloadItem/ThreadNumComboBoxHeader"/>
-        </ComboBox.Header>
-    </ComboBox>
-</Grid>
+    <Grid ColumnSpacing="8"
+          RowSpacing="4">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="Auto"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <TextBlock Grid.Row="0" Grid.Column="0"
+                   TextWrapping="WrapWholeWords" IsTextSelectionEnabled="True"
+                   Text="{x:Bind ViewModel.GalleryDescriptionText}"
+                   />
+        <ProgressBar Grid.Row="1" Grid.Column="0"
+                     Value="{x:Bind ViewModel.ProgressBarValue}"
+                     Maximum="{x:Bind ViewModel.ProgressBarMaximum}"
+                     />
+        <TextBlock Grid.Row="2" Grid.Column="0"
+                   TextWrapping="WrapWholeWords" IsTextSelectionEnabled="True"
+                   Text="{x:Bind ViewModel.ProgressText}"/>
+        <Button Grid.Row="0" Grid.Column="1"
+                HorizontalAlignment="Stretch"
+                Click="{x:Bind ViewModel.DownloadToggleButton_Clicked, Mode=OneTime}"
+                ToolTipService.ToolTip="{x:Bind ViewModel.DownloadToggleButtonToolTip}"
+                />
+        <Button Grid.Row="0" Grid.Column="2"
+                x:Uid="/DownloadItem/CancelBtn"
+                HorizontalAlignment="Stretch"
+                Click="{x:Bind ViewModel.RemoveDownloadButton_Click, Mode=OneTime}"
+                >
+            <SymbolIcon Symbol="Delete"/>
+        </Button>
+        <ComboBox Grid.Row="1" Grid.Column="1" Grid.RowSpan="2" Grid.ColumnSpan="2"
+                  ItemsSource="{x:Bind ViewModel.ThreadNums, Mode=OneTime}"
+                  SelectedItem="{x:Bind ViewModel.ThreadNum, Mode=TwoWay}">
+            <ComboBox.Header>
+                <TextBlock x:Uid="/DownloadItem/ThreadNumComboBoxHeader"/>
+            </ComboBox.Header>
+        </ComboBox>
+    </Grid>
+</UserControl>
