--- a/HitomiScrollViewerLib/Views/QueryBuilderView.xaml
+++ b/HitomiScrollViewerLib/Views/QueryBuilderView.xaml
@@ -6,7 +6,6 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    xmlns:vms="using:HitomiScrollViewerLib.ViewModels"
     >
     <Grid.RowDefinitions>
         <RowDefinition Height="Auto"/>
@@ -40,14 +39,14 @@
         <TextBlock Text="Select Language:"/>
         <ComboBox HorizontalAlignment="Stretch"
                   DisplayMemberPath="LocalName"
-                  ItemsSource="{x:Bind vms:QueryBuilderVM.GALLERY_LANGUAGES}"
-                  SelectedIndex="{x:Bind ViewModel.GalleryLanguageSelectedIndex, Mode=TwoWay}"
+                  ItemsSource="{x:Bind ViewModel.GalleryLanguages}"
+                  SelectedItem="{x:Bind ViewModel.QueryConfiguration.SelectedLanguage, Mode=TwoWay}"
                   />
         <TextBlock Text="Select Type:"/>
         <ComboBox HorizontalAlignment="Stretch"
                   DisplayMemberPath="DisplayName"
-                  ItemsSource="{x:Bind vms:QueryBuilderVM.GALLERY_TYPE_ENTITIES}"
-                  SelectedIndex="{x:Bind ViewModel.GalleryTypeSelectedIndex, Mode=TwoWay}"
+                  ItemsSource="{x:Bind ViewModel.GalleryTypes}"
+                  SelectedItem="{x:Bind ViewModel.QueryConfiguration.SelectedType, Mode=TwoWay}"
                   />
         <TextBlock Text="Search by Title:"/>
         <TextBox HorizontalAlignment="Stretch" Text="{x:Bind ViewModel.SearchTitleText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
